ADBT: Adding previous modules adbt_webservices and adbt_routing.

--- a/adbt_webservices/adbt_webservices.info.yml
+++ b/adbt_webservices/adbt_webservices.info.yml
@@ -1,5 +1,5 @@
-name: Caching (Training)
-description: Drupal sample code for the topic Caching.
+name: Web Services (Training)
+description: Drupal sample code for the topic Web Services.
 type: module
 package: Axelerant Drupal Backend Training
 
