--- a/adbt_routing/adbt_routing.info.yml
+++ b/adbt_routing/adbt_routing.info.yml
@@ -1,5 +1,5 @@
-name: Caching (Training)
-description: Drupal sample code for the topic Caching.
+name: Routing System (Training)
+description: Drupal sample code for the topic Routing System.
 type: module
 package: Axelerant Drupal Backend Training
 
